configuration: added add-opens to fix ImageNameSubstitutor exception